--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,14 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || title %></title>
-    <%= stylesheet_link_tag "site" %>
-    <%= javascript_include_tag "site" %>
+    <%= stylesheet_link_tag "styles" %>
   </head>
   <body>
-    <%= yield %>
+    <div class="header">
+      <a href="/">Richard Towers</a>
+    </div>
+    <main>
+      <div class="content">
+      <%= yield %>
+      </div>
+    </main>
+    <footer>
+      <img alt="doge" src="/images/doge.png"> Copyleft Richard Towers 2021. All wrongs reserved.
+    </footer>
   </body>
 </html>
